src/main/java/com/example/usedTrade/error/AbstractException.java
package com.example.usedTrade.error;

public abstract class AbstractException extends RuntimeException{
    abstract public int getStatusCode();
    abstract public String getMessage();
}
